# patch-council

./: .gitignore  README.md  pyproject.toml
.project-ai/: config.yaml
apps/patchcouncil-ui/: README.md  package-lock.json  package.json  server.js
apps/patchcouncil-ui/cli/: cli.js
apps/patchcouncil-ui/engine/: config.js  council.js  design-council.js  event-sink.js  events.js  prompts.js  session-store.js  workplan-artifact.js  workplan.js
apps/patchcouncil-ui/public/: app.js  config.html  config.js  index.html  styles.css
apps/patchcouncil-ui/scripts/: council-smoke.js  fake-runtime.js  generate-mock-session.js  runtime-fake-check.js  runtime-real-check.js  smoke-test.js
apps/patchcouncil-ui/src/: events.ts
docs/: AI_CONTEXT.md  ARCHITECTURE.md  COUNCIL_EVENTS.md  DECISIONS.md  ROADMAP.md  RUNBOOK.md  iteration-2026-05-26-council-design.md
docs/designs/: 2026-06-03-workplan-council-smoke-topic.md
docs/iterations/: 2026-05-26-council-design.md
docs/superpowers/plans/: 2026-05-28-workbench-v1-implementation.md  2026-06-01-agent-turn-signal-v1-implementation.md  2026-06-01-workplan-v1-implementation.md  2026-06-02-design-author-response-v1-implementation.md  2026-06-02-design-council-workflow-implementation.md  2026-06-02-workplan-council-v1-implementation.md
docs/superpowers/specs/: 2026-05-28-workbench-v1-design.md  2026-06-01-agent-turn-signal-v1-design.md  2026-06-01-workplan-v1-design.md  (+3 more)
docs/workplans/: 2026-06-03-workplan-council-smoke-topic.md
src/aictl/: cli.py  config.py  context.py  prompts.py  task_store.py
src/aictl/agents/: base.py  (+3 more)
(+36 files in other folders)
