[project]
name = "aictl"
version = "0.1.0"
description = "Local AI CLI orchestrator for planning, implementation, review, and task memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1",
  "pyyaml>=6.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.scripts]
aictl = "aictl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aictl"]

[tool.hatch.build.targets.wheel.force-include]
"src/aictl/prompts" = "aictl/prompts"
